--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,15 @@
     </noscript>
     <div id="root"></div>
 
+    <!-- to set up emailJS service-->
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+      (function(){
+          emailjs.init("user_GDll62B1qUJjsYKEKL4z2");
+      })();
+    </script>
 
 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
